tests/sksl/errors/ReservedNameExtern.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'extern'
1 error
